--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.brandonjenniges.androidgalleryviewerexample"
+        applicationId "com.brandonjenniges.androidphotoviewer"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
